--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ python-dotenv = "^1.0.1"
 requests = "^2.32.5"
 rich = "^14.0.0"
 semver = "^3.0.2"
+starlette = "^0.49.0"
 structlog = "^24.4.0"
 tabulate = "^0.9.0"
 tiktoken = "^0.11"
